# ravenbar

./: Cargo.toml  README.md
examples/: default.json  default.yml
src/: bar.rs  command.rs  config.rs  draw.rs  event.rs  font.rs  main.rs  properties.rs  props.rs  utils.rs  window.rs
src/command/: alsa.rs  common.rs  state.rs  sysinfo.rs
src/event/: default.rs  files.rs  state.rs  window.rs
