[package]
name = "ravenbar"
version = "0.1.0"
authors = ["Michał Moniewski <mmoniewski@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusttype = "0.9.2"
fontconfig = "0.2.0"
