[package]
name = "ravenbar"
version = "0.1.0"
authors = ["Michał Moniewski <mmoniewski@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
freetype-rs = "0.26"
freetype-sys = "0.13"
fontconfig = "0.2.0"
run_script = "^0.6.3"
unicode-normalization = "0.1.13"
dirs = "3.0"
structopt = "0.3"
sysinfo = "0.15"
dyn-clone = "1.0.3"
alsa = "0.4.3"
